# dinput-detour

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
dinput-detour/: CMakeLists.txt  dinput-detour.cpp  dinput-detour.def  dinput-detour.h  direct_input_8.cpp  direct_input_8.h  direct_input_device_8.cpp  direct_input_device_8.h  direct_input_effect.cpp  direct_input_effect.h  log.cpp  log.h  stringconv.cpp  stringconv.h  utils.cpp  utils.h
setdll/: CMakeLists.txt
withdll/: CMakeLists.txt
